Change Modded Nuggets Description

--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -209,15 +209,15 @@
   "item.destriummod.destrium_ingot.desc": "Amazonite",
   "item.destriummod.destrium_ingot.desc2": ">> Destrium",
   "item.destriummod.destrium_ingot.desc3": "Argonide",
-  "item.destriummod.destrium_nuggets.desc": "Used to craft the Destrium Ingot",
+  "item.destriummod.destrium_nuggets.desc": "Nuggets used to craft a large number of items",
   "item.destriummod.amazonite_crumb.desc": "Used to craft the Amazonite Dust",
   "item.destriummod.amazonite_dust.desc": "Used to craft the Amazonite Fragment",
   "item.destriummod.amazonite_fragment.desc": "Used to craft the Amazonite Nuggets",
-  "item.destriummod.amazonite_nuggets.desc": "Used to craft the Amazonite Ingot",
+  "item.destriummod.amazonite_nuggets.desc": "Nuggets used to craft a large number of items",
   "item.destriummod.argonide_ingot.desc": "Amazonite",
   "item.destriummod.argonide_ingot.desc2": "Destrium",
   "item.destriummod.argonide_ingot.desc3": ">> Argonide",
-  "item.destriummod.argonide_nuggets.desc": "Used to craft the Argonide Ingot",
+  "item.destriummod.argonide_nuggets.desc": "Nuggets used to craft a large number of items",
   "item.destriummod.repair_gem.desc": "Used to Repair Items and other things",
   "item.destriummod.repair_fragment.desc": "Used to craft the Repair Gem",
   
