--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -209,15 +209,15 @@
   "item.destriummod.destrium_ingot.desc": "Amazonite",
   "item.destriummod.destrium_ingot.desc2": ">> Destrium",
   "item.destriummod.destrium_ingot.desc3": "Argonide",
-  "item.destriummod.destrium_nuggets.desc": "Utilisé pour craft le Lingot De Destrium",
+  "item.destriummod.destrium_nuggets.desc": "Pépites utilisées pour fabriquer un grand nombre d'objets",
   "item.destriummod.amazonite_crumb.desc": "Utilisé pour craft le Poudre d'Amazonite",
   "item.destriummod.amazonite_dust.desc": "Utilisé pour craft le Fragment d'Amazonite",
   "item.destriummod.amazonite_fragment.desc": "Utilisé pour craft la Pépite d'Amazonite",
-  "item.destriummod.amazonite_nuggets.desc": "Utilisé pour craft le Lingot d'Amazonite",
+  "item.destriummod.amazonite_nuggets.desc": "Pépites utilisées pour fabriquer un grand nombre d'objets",
   "item.destriummod.argonide_ingot.desc": "Amazonite",
   "item.destriummod.argonide_ingot.desc2": "Destrium",
   "item.destriummod.argonide_ingot.desc3": ">> Argonide",
-  "item.destriummod.argonide_nuggets.desc": "Utilisé pour craft le Lingot d'Argonide",
+  "item.destriummod.argonide_nuggets.desc": "Pépites utilisées pour fabriquer un grand nombre d'objets",
   "item.destriummod.repair_gem.desc": "Utilisé pour réparer les items et autres",
   "item.destriummod.repair_fragment.desc": "Utilisé pour craft la Gemme De Réparation",
   
