Delete s to nugget name

--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -1,19 +1,19 @@
 {
   "item.destriummod.amazonite_ingot": "Amazonite Ingot",
-  "item.destriummod.amazonite_nuggets": "Amazonite Nuggets",
+  "item.destriummod.amazonite_nuggets": "Amazonite Nugget",
   "item.destriummod.amazonite_fragment": "Amazonite Fragment",
   "item.destriummod.amazonite_dust": "Amazonite Dust",
   "item.destriummod.amazonite_crumb": "Amazonite Crumb",
   "item.destriummod.destrium_ingot": "Destrium Ingot",
-  "item.destriummod.destrium_nuggets": "Destrium Nuggets",
+  "item.destriummod.destrium_nuggets": "Destrium Nugget",
   "item.destriummod.argonide_ingot": "Argonide Ingot",
-  "item.destriummod.argonide_nuggets": "Argonide Nuggets",
+  "item.destriummod.argonide_nuggets": "Argonide Nugget",
   "item.destriummod.repair_fragment": "Repair Fragment",
   "item.destriummod.repair_gem": "Repair Gem",
 
-  "item.destriummod.emerald_nuggets": "Emerald Nuggets",
-  "item.destriummod.diamond_nuggets": "Diamond Nuggets",
-  "item.destriummod.netherite_nuggets": "Netherite Nuggets",
+  "item.destriummod.emerald_nuggets": "Emerald Nugget",
+  "item.destriummod.diamond_nuggets": "Diamond Nugget",
+  "item.destriummod.netherite_nuggets": "Netherite Nugget",
   
   
   "item.destriummod.amazonite_stick": "Amazonite Stick",
