Rename empoisoned water

--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -176,7 +176,7 @@
 
   
   
-  "fluid.destriummod.poison_water": "Empoisoned Water",
+  "fluid.destriummod.poison_water": "Poisoned Water",
   
 
 
