--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -184,7 +184,7 @@
 
   "itemGroup.destriummod.blocktab": "Blocks Tabs",
   "itemGroup.destriummod.itemtab": "Items Tabs",
-  "itemGroup.destriummod.tooltab": "Tools Ands Armors Tabs",
+  "itemGroup.destriummod.tooltab": "Tools & Armors Tabs",
   "itemGroup.destriummod.foodtab": "Foods Tabs",
 
   
