Delete useless word in desc of amazonite armor

--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -191,10 +191,10 @@
   
   
   
-  "item.destriummod.amazonite_leggings.desc": "Fire Résistance Infinity",
-  "item.destriummod.amazonite_boots.desc": "Speed Two Infinity",
-  "item.destriummod.amazonite_chestplate.desc": "Resistance Infinity",
-  "item.destriummod.amazonite_helmet.desc": "Invisibility Infinity",
+  "item.destriummod.amazonite_leggings.desc": "Fire Résistance",
+  "item.destriummod.amazonite_boots.desc": "Speed Two",
+  "item.destriummod.amazonite_chestplate.desc": "Resistance",
+  "item.destriummod.amazonite_helmet.desc": "Invisibility",
   
   
   "item.destriummod.spawners_pickaxe.desc": " ",
