--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -191,10 +191,10 @@
   
   
   
-  "item.destriummod.amazonite_leggings.desc": "Résistance Au Feu Infini",
-  "item.destriummod.amazonite_boots.desc": "Vitesse Deux Infini",
-  "item.destriummod.amazonite_chestplate.desc": "Résistance Infini",
-  "item.destriummod.amazonite_helmet.desc": "Invisibilité Infini",
+  "item.destriummod.amazonite_leggings.desc": "Résistance Au Feu",
+  "item.destriummod.amazonite_boots.desc": "Vitesse Deux",
+  "item.destriummod.amazonite_chestplate.desc": "Résistance",
+  "item.destriummod.amazonite_helmet.desc": "Invisibilité",
   
   
   "item.destriummod.spawners_pickaxe.desc": " ",
