Add accent to Leggings Name if french

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -44,17 +44,17 @@
   
   "item.destriummod.amazonite_helmet": "Casque En Amazonite",
   "item.destriummod.amazonite_chestplate": "Plastron En Amazonite",
-  "item.destriummod.amazonite_leggings": "Jambiere En Amazonite",
+  "item.destriummod.amazonite_leggings": "Jambière En Amazonite",
   "item.destriummod.amazonite_boots": "Bottes En Amazonite",
   
   "item.destriummod.destrium_helmet": "Casque En Destrium",
   "item.destriummod.destrium_chestplate": "Plastron En Destrium",
-  "item.destriummod.destrium_leggings": "Jambiere En Destrium",
+  "item.destriummod.destrium_leggings": "Jambière En Destrium",
   "item.destriummod.destrium_boots": "Bottes En Destrium",
 
   "item.destriummod.argonide_helmet": "Casque En Argonide",
   "item.destriummod.argonide_chestplate": "Plastron En Argonide",
-  "item.destriummod.argonide_leggings": "Jambiere En Argonide",
+  "item.destriummod.argonide_leggings": "Jambière En Argonide",
   "item.destriummod.argonide_boots": "Bottes En Argonide",
 
   "item.destriummod.speed_boots": "Bottes De Vitesse",
