--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -73,7 +73,7 @@
 
   "item.destriummod.amazonite_seeds": "Amazonite Seeds",
   "item.destriummod.destrium_seeds": "Destrium Seeds",
-  "item.destriummod.xp_seeds": "Xp Seeds",
+  "item.destriummod.xp_seeds": "Experience Seeds",
 
 
   "item.destriummod.golden_core": "Golden Core",
@@ -161,7 +161,7 @@
 
   "block.destriummod.amazonite_plants": "Amazonite Plants",
   "block.destriummod.destrium_plants": "Destrium Plants",
-  "block.destriummod.xp_plants": "Xp Plants",
+  "block.destriummod.xp_plants": "Experience Plants",
 
 
   "block.destriummod.amazonite_relique_block": "Amazonite Relique Block",
