Delete s to french name

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -140,7 +140,7 @@
   "block.destriummod.dark_blue_cloud": "Nuage Bleu Foncé",
   "block.destriummod.dark_gray_cloud": "Nuage Gris Foncé",
   "block.destriummod.dark_green_cloud": "Nuage Vert Foncé",
-  "block.destriummod.dark_purple_cloud": "Nuage Violets Foncé",
+  "block.destriummod.dark_purple_cloud": "Nuage Violet Foncé",
   "block.destriummod.dark_red_cloud": "Nuage Rouge Foncé",
   "block.destriummod.gray_cloud": "Nuage Gris",
   "block.destriummod.green_cloud": "Nuage Vert",
@@ -151,7 +151,7 @@
   "block.destriummod.magenta_cloud": "Nuage Magenta",
   "block.destriummod.orange_cloud": "Nuage Orange",
   "block.destriummod.pink_cloud": "Nuage Rose",
-  "block.destriummod.purple_cloud": "Nuage Violets",
+  "block.destriummod.purple_cloud": "Nuage Violet",
   "block.destriummod.red_cloud": "Nuage Rouge",
   "block.destriummod.ultra_dark_blue_cloud": "Nuage Ultra Bleu Foncé",
   "block.destriummod.yellow_cloud": "Nuage Jaune",
