Add maj to french name

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -170,8 +170,8 @@
   "block.destriummod.below_block": "Bloc de l'En Dessous",
 
 
-  "block.destriummod.clover": "Trèfle à trois Feuille",
-  "block.destriummod.clover_two": "Trèfle à quatre Feuille",
+  "block.destriummod.clover": "Trèfle à Trois Feuille",
+  "block.destriummod.clover_two": "Trèfle à Quatre Feuille",
 
 
 
