French Ama Desc fault fix

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -230,7 +230,7 @@
   "item.destriummod.destrium_apple.desc6": "Dix Coeurs d'Absorption Pendant Cinq Minutes",
   
   "item.destriummod.amazonite_apple.desc": "Soigne Tout Les Coeurs",
-  "item.destriummod.amazonite_apple.desc2": "Force Quatre Pendant Quarantes Secondes",
+  "item.destriummod.amazonite_apple.desc2": "Force Quatre Pendant Quarante Secondes",
   "item.destriummod.amazonite_apple.desc3": "Résistance Quatre Pendant Vingts Minutes",
   "item.destriummod.amazonite_apple.desc4": "Boost De Dix Coeurs Pendant Dix Minutes",
   "item.destriummod.amazonite_apple.desc5": "Regeneration Cinq Pendant Deux Minutes Et Trente Secondes",
