Update Forge Version

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,37 @@
 1.19.x Changelog
+45.2
+====
+ - 45.2.0 1.19.4 RB 2
+
+45.1
+====
+ - 45.1.19 Fix `Level` leak in debug HUD (#9700)
+           Co-authored-by: malte0811 <malte0811@web.de>
+ - 45.1.18 Keep order of sources in PackRepository (#9703)
+           Co-authored-by: dhyces <10985914+dhyces@users.noreply.github.com>
+ - 45.1.17 Fix DelegatingPackResources searching resource path twice (#9698)
+ - 45.1.16 Fix parameter names in IForgeDimensionSpecialEffects.adjustLightmapColors to better describe what they are. (#9657)
+ - 45.1.15 Add mods button to pause menu (#9654)
+ - 45.1.14 Fixed FluidUtil#tryFillContainer returning invalid result when simulating #9358
+ - 45.1.13 Fix conflicting keybindings not having the correct click count set. #9360
+ - 45.1.12 Fixed AdvancementsScreen.java to render next/previous page buttons now. (#9650)
+ - 45.1.11 Properly Handle Fluid Updates while in a Boat Fix #9256 (#9428)
+ - 45.1.10 New hook in IClientBlockExtensions to handle enabling tinting on breaking particles. #9446
+ - 45.1.9  Add `EmptyEnergyStorage` (#9487)
+ - 45.1.8  Support IPv6 address compression for logged IPs
+ - 45.1.7  Add option to advertise dedicated servers to LAN. (#9502)
+ - 45.1.6  Add particle description data provider (#9510)
+ - 45.1.5  AlterGroundEvent for modifying block placement performed by AlterGroundDecorator (#9636)
+ - 45.1.4  Improve logging for server connections (#9622)
+ - 45.1.3  Fix placing fluids into waterlogged blocks with FluidUtil::tryPlaceFluid. To behave more like vanilla MC-127110 (#9519)
+ - 45.1.2  Add proper duplicate mod error message that includes the mod id(s) and mod files. (#9474)
+ - 45.1.1  Make 1.20.x the main TC branch.
+ - 45.1.0  1.19.4 Recommended Build
+
 45.0
 ====
+ - 45.0.66 Add method to GatherDataEvent to obtain collection of all input paths. (#9499)
+ - 45.0.65 Log error when Sheets is class-loaded before registration is completed (#9475)
  - 45.0.64 [1.19.x] Re-implement RenderTooltipEvent.Color (#9497)
            * Reimplement RenderTooltipEvent.Color
            * Formatting, comments, EXC
