--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -9,7 +9,7 @@
   "item.destriummod.argonide_ingot": "Argonide Ingot",
   "item.destriummod.argonide_nuggets": "Argonide Nuggets",
   "item.destriummod.repair_fragment": "Repair Fragment",
-  "item.destriummod.repair_ingot": "Repair Ingot",
+  "item.destriummod.repair_gem": "Repair Gem",
 
   "item.destriummod.emerald_nuggets": "Emerald Nuggets",
   "item.destriummod.diamond_nuggets": "Diamond Nuggets",
@@ -218,8 +218,8 @@
   "item.destriummod.argonide_ingot.desc2": "Destrium",
   "item.destriummod.argonide_ingot.desc3": ">> Argonide",
   "item.destriummod.argonide_nuggets.desc": "Used to craft the Argonide Ingot",
-  "item.destriummod.repair_ingot.desc": "Used to Repair Items and other things",
-  "item.destriummod.repair_fragment.desc": "Used to craft the Repair Ingot",
+  "item.destriummod.repair_gem.desc": "Used to Repair Items and other things",
+  "item.destriummod.repair_fragment.desc": "Used to craft the Repair Gem",
   
   "item.destriummod.emerald_nuggets.desc": "Used to craft the Emerald",
   "item.destriummod.diamond_nuggets.desc": "Used to craft the Diamond",
