Add accent in french name

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -21,19 +21,19 @@
   "item.destriummod.argonide_stick": "Baton en Argonide",
 
 
-  "item.destriummod.amazonite_sword": "Epée en Amazonite",
+  "item.destriummod.amazonite_sword": "Épée en Amazonite",
   "item.destriummod.amazonite_pickaxe": "Pioche en Amazonite",
   "item.destriummod.amazonite_axe": "Hache en Amazonite",
   "item.destriummod.amazonite_shovel": "Pelle Een Amazonite",
   "item.destriummod.amazonite_hoes": "Houe en Amazonite",
 
-  "item.destriummod.destrium_sword": "Epée en Destrium",
+  "item.destriummod.destrium_sword": "Épée en Destrium",
   "item.destriummod.destrium_pickaxe": "Pioche en Destrium",
   "item.destriummod.destrium_axe": "Hache en Destrium",
   "item.destriummod.destrium_shovel": "Pelle en Destrium",
   "item.destriummod.destrium_hoes": "Houe en Destrium",
 
-  "item.destriummod.argonide_sword": "Epée en Argonide",
+  "item.destriummod.argonide_sword": "Épée en Argonide",
   "item.destriummod.argonide_pickaxe": "Pioche en Argonide",
   "item.destriummod.argonide_axe": "Hache en Argonide",
   "item.destriummod.argonide_shovel": "Pelle en Argonide",
