--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -113,14 +113,14 @@
   "block.destriummod.repair_ore": "Minerais de Réparation",
 
 
-  "block.destriummod.cobblestone_compressed1": "Pierre Compressé",
-  "block.destriummod.cobblestone_compressed2": "Pierre Compressé Deux Fois",
-  "block.destriummod.cobblestone_compressed3": "Pierre Compressé Trois Fois",
-  "block.destriummod.cobblestone_compressed4": "Pierre Compressé Quatre Fois",
-  "block.destriummod.cobblestone_compressed5": "Pierre Compressé Cinq Fois",
-  "block.destriummod.cobblestone_compressed6": "Pierre Compressé Six Fois",
-  "block.destriummod.cobblestone_compressed7": "Pierre Compressé Sept Fois",
-  "block.destriummod.cobblestone_compressed8": "Pierre Compressé Huit Fois",
+  "block.destriummod.cobblestone_compressed1": "Pierres Compressé",
+  "block.destriummod.cobblestone_compressed2": "Pierres Compressé Deux Fois",
+  "block.destriummod.cobblestone_compressed3": "Pierres Compressé Trois Fois",
+  "block.destriummod.cobblestone_compressed4": "Pierres Compressé Quatre Fois",
+  "block.destriummod.cobblestone_compressed5": "Pierres Compressé Cinq Fois",
+  "block.destriummod.cobblestone_compressed6": "Pierres Compressé Six Fois",
+  "block.destriummod.cobblestone_compressed7": "Pierres Compressé Sept Fois",
+  "block.destriummod.cobblestone_compressed8": "Pierres Compressé Huit Fois",
 
   "block.destriummod.dirt_compressed1": "Terre Compressé",
   "block.destriummod.dirt_compressed2": "Terre Compressé Deux Fois",
