Rename French CreativeTabs Blocks

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -182,7 +182,7 @@
 
 
 
-  "itemGroup.destriummod.blocktab": "Onglets Des Blocks",
+  "itemGroup.destriummod.blocktab": "Onglets Des Blocs",
   "itemGroup.destriummod.itemtab": "Onglets Des Items",
   "itemGroup.destriummod.tooltab": "Onglets Des Outils Et Armures",
   "itemGroup.destriummod.foodtab": "Onglets Des Nourritures",
