Delete useless maj in en desc

--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -212,7 +212,7 @@
   "item.destriummod.argonide_ingot.desc": "Amazonite",
   "item.destriummod.argonide_ingot.desc2": "Destrium",
   "item.destriummod.argonide_ingot.desc3": ">> Argonide",
-  "item.destriummod.repair_gem.desc": "Used to Repair Items and other things",
+  "item.destriummod.repair_gem.desc": "Used to repair items and other things",
 
 
   "item.destriummod.amazonite_stick.desc": "Used to craft the Amazonite Tools",
