Correct fault in french name Stick

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -16,9 +16,9 @@
   "item.destriummod.netherite_nuggets": "Pépite de Netherite",
 
 
-  "item.destriummod.amazonite_stick": "Baton en Amazonite",
-  "item.destriummod.destrium_stick": "Baton en Destrium",
-  "item.destriummod.argonide_stick": "Baton en Argonide",
+  "item.destriummod.amazonite_stick": "Bâton en Amazonite",
+  "item.destriummod.destrium_stick": "Bâton en Destrium",
+  "item.destriummod.argonide_stick": "Bâton en Argonide",
 
 
   "item.destriummod.amazonite_sword": "Épée en Amazonite",
